# datakaizen

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-site.yml  github-actions-demo.yml
docs/: index.md
docs/css/: extra.css
docs/data-engineering/: airflow.md
docs/devops/: deploying-a-mkdocs-site-on-s3.md
docs/software-engineering/: Building_an_MVP.md
